// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty 1`] = `
<DocumentFragment>
  <span
    class=""
  />
</DocumentFragment>
`;

exports[`icon variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-toggle-group__icon"
  >
    ICON
  </span>
</DocumentFragment>
`;

exports[`text variant 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-toggle-group__text"
  >
    Test
  </span>
</DocumentFragment>
`;
